# multi-serial-logger

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  TODO.md  help_output.txt  multilogger.py  pyproject.toml  settings.txt
src/multiseriallogger/: __main__.py  logger.py
